<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>dg_tutorial_with_turtlesim</name>
    <version>1.0.0</version>
    
    <description>
        Dynamic Graph Manager for turtlesim, for tutorial purposes.
    </description>

    <maintainer email="mnaveau@tuebingen.mpg.de">Maximilien Naveau</maintainer>
    <maintainer email="vberenz@tuebingen.mpg.de">Vincent Berenz</maintainer>

    <license>BSD-3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>

    <!-- Run time dependencies. -->
    <depend>real_time_tools</depend>
    <depend>dynamic_graph_manager</depend>
    <depend>rclcpp</depend>
    <depend>turtlesim</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>mim_msgs</depend>
    <depend>dynamic-graph</depend>
    <depend>dynamic-graph-python</depend>
    
    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
